--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "portfolio_sander_de_snajer",
-  "version": "1.0.0",
-  "description": "Portfolio 2016",
+  "name": "react-boilerplate",
+  "version": "0.0.1",
+  "description": "React webpack boilerplate",
   "main": "./src/app.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline"
+    "start": "webpack-dev-server --hot --inline --history-api-fallback",
+    "deploy": "webpack --production --config webpack-production.config.js --progress --profile"
   },
   "author": "Sander de Snaijer",
   "license": "ISC",
@@ -17,19 +18,27 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.25.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^2.0.0",
+    "node-sass": "^3.10.1",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-router": "^2.8.1"
   }
 }
