--- a/.eslintrc
+++ b/.eslintrc
@@ -1,34 +1,28 @@
 {
     "parser": "babel-eslint",
     "extends": ["airbnb"],
-     "env": {
-        "browser": true,
-        "es6": true,
-        'commonjs': true
+    "env": {
+      "browser": true,
+      "es6": true,
+      'commonjs': true
     },
+    "plugins": [
+      "import",
+      "react",
+    ],
     "parserOptions": {
-        "ecmaVersion": 7,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        }
+      "ecmaVersion": 7,
+      "sourceType": "module",
+      "ecmaFeatures": {
+          "experimentalObjectRestSpread": true,
+          "jsx": true
+      }
     },
     "rules": {
-        "indent": ["error", 4],
-        "react/jsx-indent": [2,4],
-        "comma-dangle" : ["error", "never"],
-        "linebreak-style": ["error", "unix"],
-        "quotes": ["error", "single"],
-        "arrow-body-style": ["error", "always"],
-        "react/require-extension": 0,
-        "semi": ["error","always"],
-        "max-len" : 0,
-        "strict": [0,"never"],
-        "no-param-reassign" : 0,
-        "no-console": [2,{allow: ["info","error"]}]
-    },
-     "settings": {
-         "import/resolver": "webpack"
+      "indent": ["error", 2],
+      "quotes": ["error", "single"],
+      "react/require-extension": 0,
+      "import/no-extraneous-dependencies" : 0,
+      "import/no-unresolved": 0
     }
 }
