--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-boilerplate",
   "version": "0.0.1",
   "description": "React webpack boilerplate",
-  "main": "./src/app.js",
+  "main": "./src/client.jsx",
   "scripts": {
     "start": "webpack-dev-server --hot --inline --history-api-fallback",
     "deploy": "webpack --production --config webpack-production.config.js --progress --profile"
@@ -14,6 +14,8 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-syntax-jsx": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
@@ -39,6 +41,8 @@
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^2.8.1"
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0"
   }
 }
