--- a/package.json
+++ b/package.json
@@ -4,45 +4,46 @@
   "description": "React webpack boilerplate",
   "main": "./src/client.jsx",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --history-api-fallback",
+    "start": "node server.js",
     "deploy": "webpack --production --config webpack-production.config.js --progress --profile"
   },
   "author": "Sander de Snaijer",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-syntax-jsx": "^6.13.0",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.0.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.25.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.26.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "image-webpack-loader": "^2.0.0",
-    "node-sass": "^3.10.1",
-    "react-hot-loader": "^1.3.0",
+    "html-webpack-plugin": "^2.24.1",
+    "image-webpack-loader": "^3.0.0",
+    "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
+    "react-svg": "^1.1.5",
     "redux": "^3.6.0"
   }
 }
