--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-boilerplate",
-  "version": "0.0.1",
-  "description": "React webpack boilerplate",
+  "version": "0.0.3",
+  "description": "React boilerplate",
   "main": "./src/client.jsx",
   "scripts": {
     "start": "node server.js",
@@ -43,7 +43,6 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
-    "react-svg": "^1.1.5",
     "redux": "^3.6.0"
   }
 }
